kube/collectors-dev-memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-memory
  labels:
    k8s-app: uc-ls-memory
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-memory
  template:
    metadata:
      labels:
        k8s-app: uc-ls-memory
    spec:
      containers:
        - name: uc-ls-memory
          image: uc_ls_memory-monitor
          imagePullPolicy: IfNotPresent
          # image: atlasanalyticsservice/uc_ls_memory-monitor:latest
          # command: ["sleep"]
          # args: ["infinity"]
