kube/collectors-dev-xcache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-xcache
  labels:
    k8s-app: uc-ls-xcache
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-xcache
  template:
    metadata:
      labels:
        k8s-app: uc-ls-xcache
    spec:
      containers:
        - name: uc-logstash
          image: uc_ls_xcache
          imagePullPolicy: IfNotPresent
          # image: atlasanalyticsservice/uc_ls_xcache:latest
          # command: ["sleep"]
          # args: ["infinity"]
