kube/xcache_gstream.yaml
# only collectors.yaml should be recreated.
# If services are recreated, collector.atlas-ml.org should be updated to point to them.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-xcache-gstream
  namespace: aaas
  labels:
    k8s-app: uc-ls-xcache-gstream
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-xcache-gstream
  template:
    metadata:
      labels:
        k8s-app: uc-ls-xcache-gstream
    spec:
      containers:
        - name: uc-ls-xcache-gstream
          image: atlasanalyticsservice/uc_ls_xcache_gstream:latest
          # command: ["sleep"]
          # args: ["infinity"]
