kube/af.yaml
# listening on pilot.atlas-ml.org
kind: Service
apiVersion: v1
metadata:
  name: uc-ls-af
  namespace: collectors
  labels:
    k8s-app: uc-ls-af
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    k8s-app: uc-ls-af
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uc-ls-af
  namespace: collectors
  labels:
    k8s-app: uc-ls-af
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pilot.atlas-ml.org
      secretName: autogenerated-for-uc-ls-af
  rules:
    - host: pilot.atlas-ml.org
      http:
        paths:
          - path: /
            backend:
              serviceName: uc-ls-af
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-af
  namespace: collectors
  labels:
    k8s-app: uc-ls-af
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-af
  template:
    metadata:
      labels:
        k8s-app: uc-ls-af
    spec:
      containers:
        - name: uc-ls-af
          image: docker.io/atlasanalyticsservice/uc_ls_af:latest
          # command: ["sleep"]
          # args: ["infinity"]
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
