kube/memory-monitor.yaml
# listening on pilot.atlas-ml.org
kind: Service
apiVersion: v1
metadata:
  name: uc-ls-memory
  namespace: aaas
  labels:
    k8s-app: uc-ls-memory
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    k8s-app: uc-ls-memory
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uc-ls-memory
  namespace: aaas
  labels:
    k8s-app: uc-ls-memory
  annotations:
    kubernetes.io/ingress.class: slate
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pilot.atlas-ml.org
      secretName: autogenerated-for-uc-ls-memory
  rules:
    - host: pilot.atlas-ml.org
      http:
        paths:
          - path: /
            backend:
              serviceName: uc-ls-memory
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-memory
  namespace: aaas
  labels:
    k8s-app: uc-ls-memory
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-memory
  template:
    metadata:
      labels:
        k8s-app: uc-ls-memory
    spec:
      containers:
        - name: uc-ls-memory
          image: atlasanalyticsservice/uc_ls_memory-monitor:latest
          # command: ["sleep"]
          # args: ["infinity"]
