kube/xcache-node-monitor.yaml
# this collects:
# * xcache
# * xcache_node
kind: Service
apiVersion: v1
metadata:
  name: uc-ls-xcache
  namespace: aaas
  labels:
    k8s-app: uc-ls-xcache
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    k8s-app: uc-ls-xcache
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uc-ls-xcache
  namespace: aaas
  labels:
    k8s-app: uc-ls-xcache
  annotations:
    kubernetes.io/ingress.class: slate
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - xcache.atlas-ml.org
      secretName: autogenerated-for-uc-ls-xcache
  rules:
    - host: xcache.atlas-ml.org
      http:
        paths:
          - path: /
            backend:
              serviceName: uc-ls-xcache
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc-ls-xcache
  namespace: aaas
  labels:
    k8s-app: uc-ls-xcache
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: uc-ls-xcache
  template:
    metadata:
      labels:
        k8s-app: uc-ls-xcache
    spec:
      containers:
        - name: uc-ls-xcache
          image: atlasanalyticsservice/uc_ls_xcache:latest
          # command: ["sleep"]
          # args: ["infinity"]
